tests/errors/sem.arg-count-mismatch.offsetptr.or
main :: () -> void {
    x := 7;
    offsetptr(&x, 3, 1);
};
